# MLflow-Projects

./: README.md
cartpole-balancing/: .env  .gitignore  Dockerfile.server  Dockerfile.trainer  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sample-logs-training.md  test_model.py  test_suite.py  venv.sh
cartpole-balancing/notebooks/: cartpole_exploration.ipynb
cartpole-balancing/src/: dqn_agent.py  mlflow_utils.py  serve.py  train.py
